Update for Terraria Server API 1.17
Also now tell players how far away the border is for really big regions, and separated each class into its own file.

--- a/RegionVision/RegionVision.csproj
+++ b/RegionVision/RegionVision.csproj
@@ -45,6 +45,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Player.cs" />
+    <Compile Include="Region.cs" />
     <Compile Include="RegionVision.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
