--- a/RegionVision/RegionVision.csproj
+++ b/RegionVision/RegionVision.csproj
@@ -37,14 +37,15 @@
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="TerrariaServer, Version=1.3.3.3, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\refs\TerrariaServer.exe</HintPath>
+    <Reference Include="OTAPI">
+      <HintPath>D:\Software\TShock\_reference\OTAPI.dll</HintPath>
     </Reference>
-    <Reference Include="TShockAPI, Version=4.3.21.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\refs\TShockAPI.dll</HintPath>
+    <Reference Include="System" />
+    <Reference Include="TerrariaServer">
+      <HintPath>D:\Software\TShock\_reference\TerrariaServer.exe</HintPath>
+    </Reference>
+    <Reference Include="TShockAPI">
+      <HintPath>D:\Software\TShock\_reference\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
